force-app/main/default/objects/Update_Data_Event__c/Update_Data_Event__c.object-meta.xml
<CustomObject>
    <description>用于监听更新数据事件表</description>
    <label>Update Data Event</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>Update  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Update Data Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>