force-app/main/default/objects/Update_Data_Event__c/fields/Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Batch_Class__c</fullName>
    <label>Batch Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>