force-app/main/default/objects/Update_Data_Event__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <description>No:显示 Yes:不显示</description>
    <formula>ISPICKVAL( Update_Status__c , &apos;Updating&apos;) || ISPICKVAL( Update_Status__c , &apos;No need to update&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>