force-app/main/default/objects/Update_Data_Event__c/fields/Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Status__c</fullName>
    <label>Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not updated</fullName>
            </value>
            <value>
                <fullName>Updating</fullName>
            </value>
            <value>
                <fullName>Update complete</fullName>
            </value>
            <value>
                <fullName>No need to update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>